--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <br>
 <br>
 <div align ="center">
-<img src= "Imagenes\Yo.jpeg" alt="ese soy yo" height="200" width="200">
+<img src= "Yo.jpeg" alt="ese soy yo" height="200" width="200">
 </div>
 <hr size= "25" noshade><br>
 <i>HOJA DE VIDA<br>
